apps/spacedrive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacedrive
  namespace: spacedrive
  labels:
    app: spacedrive
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: spacedrive
