apps/spacedrive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacedrive-ingress
  namespace: spacedrive
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd,kube-system-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - spacedrive.nicholasshaw.cloud
  rules:
    - host: spacedrive.nicholasshaw.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spacedrive
                port:
                  number: 8080
